--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build": "rollup -cw",
     "push": "rollup -cw --environment DEST:main",
     "local": "rollup -cw --environment DEST:local",
+    "dev": "npm run local",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
