--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-screeps": "^1.0.1",
     "rollup-plugin-typescript2": "^0.30.0",
+    "tslib": "^2.5.3",
     "typescript": "^4.2.3"
   },
   "scripts": {
