--- a/package.json
+++ b/package.json
@@ -4,28 +4,30 @@
   "description": "screpp游戏的源代码",
   "main": "main.js",
   "dependencies": {
-    "@types/node": "^20.3.1",
-    "lodash": "^4.17.20",
-    "source-map": "^0.6.1"
+    "@types/node": "^22.5.2"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@types/lodash": "^3.10.1",
-    "@types/screeps": "^3.2.2",
-    "rollup": "^2.44.0",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@types/lodash": "^4.17.7",
+    "@types/screeps": "^3.3.8",
+    "lodash": "^4.17.21",
+    "rollup": "^4.21.2",
     "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-screeps": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "tslib": "^2.5.3",
-    "typescript": "^4.2.3"
+    "rollup-plugin-typescript2": "^0.36.0",
+    "screeps-steamless-client": "^1.2.1",
+    "source-map": "^0.6.1",
+    "tslib": "^2.7.0",
+    "typescript": "^5.5.4"
   },
   "scripts": {
     "build": "rollup -cw",
     "push": "rollup -cw --environment DEST:main",
     "local": "rollup -cw --environment DEST:local",
     "dev": "npm run local",
+    "client": "screeps-steamless-client --port=7878",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
