--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
   },
   "scripts": {
     "build": "rollup -cw",
-    "push": "rollup -cw --environment DEST:main",
+    "dev": "rollup -cw --environment DEST:dev",
     "local": "rollup -cw --environment DEST:local",
-    "dev": "npm run local",
+    "push": "rollup -c --environment DEST:main",
     "client": "screeps-steamless-client --port=7878",
+    "client:local": "screeps-steamless-client --port=7878 --host=127.0.0.1 --backend=127.0.0.1:21025" ,
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
